chore: update 37 files
Changed: Cargo.lock, apis/backend-api/promotion/sdkwork-promotion-backend-api.openapi.json, apps/sdkwork-promotion-common/packages/sdkwork-promotion-service/src/index.ts, apps/sdkwork-promotion-common/packages/sdkwork-promotion-service/tests/backend-service.test.ts, crates/sdkwork-commerce-promotion-repository-sqlx/src/postgres_promotion.rs, ... (37 total)
